--- a/Nature&Shapes.html
+++ b/Nature&Shapes.html
@@ -112,8 +112,12 @@ The series started with traditional paintings but was moved to digital paintings
 <br>
 <br>
 <br>
+<p class="headertext"><b>See <i>Nature&Shapes</i> highlighted on <a href="https://www.booooooom.com/submissions/natureshapes-by-sydney-kit/">BOOOOOOOM</a></b></p>
+<br>
+<br>
+<br>
 <p class="headertext"><b>Want your own?</b></p>
-<p class="text">Just <a href="../contact.html">send me</a> your favorite color, shape, and plant! Price is $10 each.</p>
+<p class="text">Just <a href="../contact.html">send me</a> your favorite color, shape, and plant!</p>
 <br>
 </div>
 </body>
