--- a/awards.html
+++ b/awards.html
@@ -27,25 +27,33 @@
 <p class="titletext" style="margin-top: 15%; margin-bottom: 0px;"><b>Gallery Shows, Public Collections, and Awards</b></p>
 <img src="img/IMG_1444.PNG">
 <p style="margin-right: 70%; margin-bottom: 0px;" class="headertext">Gallery Shows</p> 
-<p><i>December 1 to December 11, 2021</i><br>Urban Arts Space BA and BFA Show</p>
+<p><i>February, 2022</i><br>Unitus <br>Hosted by <a href="https://uas.osu.edu"target="_blank">Urban Arts Space</a></p>
 <br>
-<p><i>April 23, 2020 to Current</i><br><a href="https://u.osu.edu/radicantbodies/">The Ohio State Unversity Art & Technology Department <br>"Radicant Bodies" Online Gallery</a></p>
+<p><i>January 14, 2022</i><br>The Amazing Cat Show<br> Hosted by <a href="https://400westrich.com"target="_blank">400 West Rich</a></p>
 <br>
-<p><i>April 18, 2021</i><br><a href="https://www.instagram.com/buckeyecreativeconnection/">Columbus Spring Art Fest <br>hosted by Buckeye Creative Connection</a></p>
+<p><i>December 1 to December 11, 2021</i><br><a href="https://uas.osu.edu"target="_blank">Urban Arts Space</a> BA and BFA Show</p>
 <br>
-<p><i>April 7, 2021</i><br><a href="https://www.instagram.com/p/CNYtHY5pc42/">Buckeye Boundary Breakers Online Gallery</a></p>
+<p><i>April 23, 2020 to Current</i><br><a href="https://u.osu.edu/radicantbodies/"target="_blank">The Ohio State Unversity Art & Technology Department <br>"Radicant Bodies" Online Gallery</a></p>
 <br>
-<p><i>December 4th, 2020</i><br><a href="https://u.osu.edu/canyouseemyscreen/">The Ohio State University Art & Technology Department<br>"Can You See My Screen?" Online Gallery</a></p>
+<p><i>April 18, 2021</i><br><a href="https://www.instagram.com/buckeyecreativeconnection/"target="_blank">Columbus Spring Art Fest <br>hosted by Buckeye Creative Connection</a></p>
 <br>
-<p><i>February 23, 2020</i><br><a href="https://www.facebook.com/events/470635543819151/">The 2020 Anatomy Fashion Show<br>Hosted by Phi Delta Epsilon OH Zeta at The Ohio State University</a></p>
+<p><i>April 7, 2021</i><br><a href="https://www.instagram.com/p/CNYtHY5pc42/"target="_blank">Buckeye Boundary Breakers Online Gallery</a></p>
+<br>
+<p><i>December 4th, 2020</i><br><a href="https://u.osu.edu/canyouseemyscreen/"target="_blank">The Ohio State University Art & Technology Department<br>"Can You See My Screen?" Online Gallery</a></p>
+<br>
+<p><i>February 23, 2020</i><br><a href="https://www.facebook.com/events/470635543819151/"target="_blank">The 2020 Anatomy Fashion Show<br>Hosted by Phi Delta Epsilon OH Zeta at The Ohio State University</a></p>
 <br>
 <p><i>April 2019 to December 2019</i><br>Hopkins Hall Gallery</p>
 <br>
-<p><i>April 2, 2019</i><br><a href="https://www.instagram.com/p/BvKftxAFf-g/">Alpha Rho Chi Student Collective</a></p>
+<p><i>April 2, 2019</i><br><a href="https://www.instagram.com/p/BvKftxAFf-g/"target="_blank">Alpha Rho Chi Student Collective</a></p>
+<br>
+<br>
+<p style="margin-right: 60%; margin-bottom: 0px;" class="headertext">Publications</p> 
+<p><i>January 2022</i><br><a href="https://issuu.com/casaaltaonline/docs/strictly_the_frosted_edition/12" target="_blank">STRICTLY Magazine: The Frosted Edition</a></p>
 <br>
 <br>
 <p style="margin-right: 60%; margin-bottom: 0px;" class="headertext">Public Collections</p> 
-<p><i>September 2021</i><br><a href="https://cartoons.osu.edu/">The Billy Ireland Cartoon Library & Museum</a><br><i>Love, Me</i> Volumes One and Two</p>
+<p><i>September 2021</i><br><a href="https://cartoons.osu.edu/"target="_blank">The Billy Ireland Cartoon Library & Museum</a><br><i>Love, Me</i> Volumes One and Two</p>
 <br>
 <br>
 <p style="margin-right: 80%; margin-bottom: 0px;" class="headertext">Awards</p> 
