Color Theory & Blog updates

--- a/ALaneyDay.html
+++ b/ALaneyDay.html
@@ -54,10 +54,8 @@
 <br>
 <br>
 <br>
-<p style="font-size: 50px; text-align: center;"><b>How it all started</b></p>
-<p style="font-size: 30px; text-align: center;"> <i>A Laney Day</i>   was the final project for <a href="../Collections/osu_3DAnimation.html">3D Animation</a> that was continued</p>
-<p style="font-size: 30px; text-align: center;"> into a larger series. Each animation depicts other mannerisms of Laney</p>
-<p style="font-size: 30px; text-align: center;"> in order to get practice with 2D animation and 3D world building.</p>
+<p class="headertext"><b>How it all started</b></p>
+<p class="text"> <i>A Laney Day</i>   was the final project for 3D Animation at The Ohio State University that was continued into a larger series. Each animation depicts other mannerisms of Laney in order to get practice with 2D animation and 3D world building.</p>
 <br>
 <br>
 <br>
@@ -80,15 +78,10 @@
 <br>
 <br>
 <br>
-<p style="font-size: 50px; text-align: center;"><b>Where it's going</b></p>
-<p style="font-size: 30px; text-align: center;"> <i>A Laney Day: The Series</i>   will continue and be posted on Instagram <a href="https://www.instagram.com/sydney.kit.anim/">(@sydney.kit.anim)</a> regularly</p>
-<p style="font-size: 30px; text-align: center;"> and added to this page semi-frequently.</p>
 <br>
-<br>
-<br>
-<p style="font-size: 45px; text-align: center;"><b>How to support <i>A Laney Day: The Series</i></b></p>
-<p style="font-size: 30px; text-align: center;">Supporting takes a couple of seconds and it's free!</p>
-<p style="font-size: 30px; text-align: center;">Share the video links with your friends and family.</p>
-<p style="font-size: 30px; text-align: center;">Show love on the Instagram posts by liking and commenting.</p>
+<p class="headertext"><b>How to support <i>A Laney Day: The Series</i></b></p>
+<p class="text">Supporting takes a couple of seconds and it's free!<br>
+Share the video links with your friends and family.<br>
+Show love on the Instagram posts by liking and commenting.</p>
 </body>
 </html>
