--- a/commission.html
+++ b/commission.html
@@ -48,9 +48,12 @@
  <a href="https://www.etsy.com/shop/SydneyKit?ref=search_shop_redirect">Shop</a>
  <a href="contact.html">Contact</a>
 </div>
-<div style=" margin-left: 15%; margin-right: 15%;">
+<div style=" margin-left: 10%; margin-right: 10%;">
 <p class="titletext" style="margin-top: 10%;"><b>Commissions</b></p>
 <br>
+<div class="box" style="margin-bottom: 5%;">
+  <img src="files/character_icon.png" width="30%" height="30%" style="margin-right: 5%;" title="Character Icon"><img src="files/mimiandpapaw.jpg" width="40%" height="40%" style="margin-left: 5%;">
+</div>
 <div class="box" style="margin-bottom: 5%;">
   <img src="files/caroline.png" width="50%" height="50%" style="margin-right: 5%;"><img src="files/kavbasket.jpg" width="50%" height="50%" style="margin-left: 5%;">
 </div>
