--- a/contact.html
+++ b/contact.html
@@ -43,13 +43,13 @@
  <div style="text-align: center;">
  <p class="titletext"><b>Contact</b></p>
   <p class="headertext">Email: <a id="under" href="mailto:kit.frank.art@gmail.com">kit.frank.art@gmail.com</a></p>
-  <p class="headertext"><a id="under" href="https://www.instagram.com/sydney.kit.anim/">Instagram</a> and <a id="under" href="https://www.facebook.com/sydney.kit.anim/"></a>Facebook: @sydney.kit.anim</p>
+  <p class="headertext"><a id="under" href="https://www.instagram.com/sydney.kit.anim/">Instagram</a> and <a id="under" href="https://www.facebook.com/sydney.kit.anim/">Facebook</a>: @sydney.kit.anim</p>
  <br>
  <br>
  <br>
  <p class="titletext"><b>Artist Profiles</b></p>
  <p class="headertext"><a href="https://www.booooooom.com/user/sydneykit">BOOOOOOOM</a></p>
- <p class="headertext"><a href="https://www.columbusmakesart.com/artist/9369-sydney-kit">Columnus Makes Art</a></p>
+ <p class="headertext"><a href="https://www.columbusmakesart.com/artist/9369-sydney-kit">Columbus Makes Art</a></p>
 </div>
   
 </body>
