--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <div class="section">
   <div class="navbar">
-    <a href="index.html"><img src="img/SK_logo2.png" width="100%" height="100%"> </a> 
+    <a href="index.html"><img src="img/SK_logo2.png" class='icon'></a> 
     <a href="about.html">About</a> 
     <a href="portfolio.html">Portfolio</a>
     <a href="blog/index.html">Blog</a> 
@@ -38,8 +38,8 @@
   <div class="p fixed">
     <div class="titletext">Latest News</div>
     <div class="text">
-      <p><i>Love, Me: You Are Not Alone</i> is now here! See the comic and participate in the interactive exhibit at Urban Arts Space from November 30th to December 18th.
-      <br>Purchase your own copy (and meet Sydney) December 18th from 4pm to 6pm at Urban Arts Space.</p>
+      <p>See the introduction to the latest comic series, <i>Color Theory</i>, by reading <a href="blog/color-theory-intro.html">this blog</a>. Inspire your own
+      comic by responding to the prompts on Instagram!</p>
 </div>
 </div>
 </div>
