--- a/loveme/about.html
+++ b/loveme/about.html
@@ -12,7 +12,7 @@
     <a href="../about.html">About</a> 
     <a href="../portfolio.html">Portfolio</a>
     <a href="../blog/index.html">Blog</a>
-   <a href="../shop.html">Shop</a>
+   <a href="https://www.etsy.com/shop/SydneyKit?ref=search_shop_redirect">Shop</a>
    <a href="../contact.html">Contact</a>
   </div>
       <br  id="anchor1">   <div style="margin-right: 10%; margin-left: 10%;">
@@ -36,7 +36,7 @@
       <br>
       <p class="headertext">How It Started</p>
 <p class="text"><i>Love, Me</i> started off as a semester-long project for an undergraduate class and has continued into a larger series. The course
-was taught by <a href="http://www.studiovicieux.org">Mitch Vicieux</a> who is now the co-founder, along with Sydney Kit, of the Columbus-based comic club CX3.
+was taught by <a href="https://www.vicieux.art/">Mitch Vicieux</a> who is now the co-founder, along with Sydney Kit, of the Columbus-based comic club <a href="https://www.instagram.com/cx3.ohio/" target="blank">CX3</a>.
 <br><br>It continued outside of class projects and into a second volume, which saw the addition of Candy Princehorn as the script creator. Candy continues to work 
 as the script creator for the series.</p>
 <div class="w3-content w3-display-container">
