--- a/portfolio.html
+++ b/portfolio.html
@@ -34,11 +34,11 @@
   <p style="margin-bottom: 0px;margin-top: 10%;" class="titletext">Portfolio</p>
   <div class="text">
     <p style="margin-right: 59%; margin-bottom: 0px;" class="headertext">Comics</p>  
-    <div class="box";>
-        <a href="loveme/about.html"><p style="text-align: left"><i>Love, Me</i></p><img src="files/icon_loveme_promo_yana.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="loveme/threebooks.jpg" style= "height: 180px; width: 320px; margin-left: 5px;"></img>
+      <div class="box";>
+        <a href="ColorTheory.html"><p style="text-align: left"><i>Color Theory</i></p> <img src="files/CT_SK_CottonCandyFields_watermark.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="files/CT_RS_wishingof_FB.jpg" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
       </div>
       <div class="box";>
-        <img src="loveme/comicbookinside2.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="loveme/LMMS_1.jpg" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
+        <a href="loveme/about.html"><p style="text-align: left"><i>Love, Me</i></p><img src="files/icon_loveme_promo_yana.jpg" style= "height: 180px; width: 320px; margin-right: 5px;"></img><img src="loveme/threebooks.jpg" style= "height: 180px; width: 320px; margin-left: 5px;"></img></a>
       </div>
     <br>
       <br>
