--- a/loveme/access.html
+++ b/loveme/access.html
@@ -34,12 +34,12 @@
 </style>
 <body style="font-size: 30px; text-align: center;">
     <div class="navbar">
-        <a href="../home.html"><img src="../img/SK_logo2.png" width="81" height="45.6"> </a> 
-        <a href="../about.html" style="font-size: 40px;">About</a> 
-        <a href="../portfolio.html" style="font-size: 40px;">Portfolio</a>
+        <a href="../index.html"><img src="../img/SK_logo2.png" width="100%" height="100%"> </a> 
+        <a href="../about.html">About</a> 
+        <a href="../portfolio.html">Portfolio</a>
         <a href="../blog/index.html">Blog</a>
-       <a href="../shop.html" style="font-size: 40px;">Shop</a>
-       <a href="../contact.html" style="font-size: 40px;">Contact</a>
+       <a href="https://www.etsy.com/shop/SydneyKit?ref=search_shop_redirect">Shop</a>
+       <a href="../contact.html">Contact</a>
       </div>
 <div class="fullCenter">
     <p style="font-size: 50px;"><i>Love, Me</i>  Digital Access</p>
