--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <br>
    <div class="titletext" style="margin-bottom: 5px;">Sydney Kit</div>
    <img src="img/SydneyKitprofilepic.jpg" style="width: 80%;">
-   <div class="headertext">Animator, Content Creator, Digital Artist
+   <div class="headertext">Animator, Cartoonist, Digital Artist
   </div>
   </div>
 </div>
@@ -38,8 +38,8 @@
   <div class="p fixed">
     <div class="titletext">Latest News</div>
     <div class="text">
-      <p>See the introduction to the latest comic series, <i>Color Theory</i>, by reading <a href="blog/color-theory-intro.html">this blog</a>. Inspire your own
-      comic by responding to the prompts on Instagram!</p>
+      <p>"A Letter to Brad" is now available! Order the book on Etsy. Check out a preview of the book <a href="blog/a-letter-to-brad-preview.html">here</a>. Read about the Leukemia and 
+      Lymphoma Society (LLS) and how it relates to "A Letter to Brad" <a href="blog/a-letter-to-brad-preorder.html">here</a>.</p>
 </div>
 </div>
 </div>
