--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="about.html">About</a> 
     <a href="portfolio.html">Portfolio</a>
     <a href="blog/index.html">Blog</a> 
-   <a href="https://www.etsy.com/shop/SydneyKit?ref=search_shop_redirect">Shop</a>
+   <a href="https://www.etsy.com/shop/SydneyKit?ref=shop_sugg">Shop</a>
    <a href="contact.html">Contact</a>
   </div>
   <div class="fixed">
