--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <div class="p fixed">
     <div class="titletext">Latest News</div>
     <div class="text">
-      <p>"A Letter to Brad" is now available! Order the book on Etsy. Check out a preview of the book <a href="blog/a-letter-to-brad-preview.html">here</a>. Read about the Leukemia and 
-      Lymphoma Society (LLS) and how it relates to "A Letter to Brad" <a href="blog/a-letter-to-brad-preorder.html">here</a>.</p>
+      <p>"A Letter to Brad" is now available! Order the book on Etsy. Check out a preview of the book <a href="blog/a-letter-to-brad-preview.html">here</a>.
+      <br><br>Learn more about the <a href="../columbuscartooncoalition.html">Columbus Cartoon Coalition</a>.</p>
 </div>
 </div>
 </div>
