cx3 updates & others

--- a/columbuscartooncoalition.html
+++ b/columbuscartooncoalition.html
@@ -10,8 +10,8 @@
   <link rel="icon" type="image/png" href="files/favicon.png">
      <!--meta-->
      <meta name="viewport" content="width=device-width, initial-scale=1">
-     <meta name="description" content="Columbus Cartoon Coalition">
-    <meta name="keywords" content="comic club, central ohio art, columbus art">
+     <meta name="description" content="The Columbus Cartoon Coalition is a group of comic creatives in Central Ohio.">
+    <meta name="keywords" content="comic club, central ohio art, columbus art, Columbus Cartoon Coalition">
     <meta name="author" content="Sydney Kit">
 </head>
 <body style="text-align: center; margin: 0%">
@@ -28,18 +28,18 @@
 <p class="titletext"><b>Columbus Cartoon Coalition</b></p>
 <img src="files/IMG_0189.PNG" style="width: 30%; height: auto">
 <p class="headertext">About the group</p> 
-<p class="text">The goal of CX3 is to establish consistent programming for cartoonists and comic artists in Columbus, OH. 
+<p class="text">The goal of the Columbus Cartoon Coalition is to establish consistent programming for cartoonists and comic artists in Columbus, OH. 
     Developing a space to commune and create, we host critique sessions, gallery hops, and other activities to bring local 
     artists together. Gathering creatives from various scenes within the city, our bi-monthly events provide ample 
     opportunities for networking, collaboration, and community building within the medium of cartoon arts.</p>
 <br>
 <p class="headertext">How to Support</p> 
-<p class="text">If you're a comic creative (artist, writer, illustrator, etc) in and around Central Ohio, join our <A href="https://discord.gg/ctGRXCCyPX">discord
+<p class="text">If you're a comic creative (artist, writer, illustrator, etc) in and around Central Ohio, join the Columbus Cartoon Coalition's official <A href="https://discord.gg/ctGRXCCyPX">discord
     server</A>. <br> Anyone can follow us on <a href="www.facebook.com/cx3.ohio">Facebook</a> and <a href="www.instagram.com/cx3.ohio">Instagram</a> by searching @cx3.ohio.
 </p>
     <br>
 <p class="headertext">Past Projects</p> 
-<p class="text">2022 Anthology<br>Buy the anthology to support our artists<br>Check out our <a href="https://www.instagram.com/tv/CifbJXKDYiM/?utm_source=ig_web_copy_link">live stream</a>.
+<p class="text">Columbus Cartoon Coalition's 2022 Anthology<br>Buy the anthology to support our artists<br>Check out our <a href="https://www.instagram.com/tv/CifbJXKDYiM/?utm_source=ig_web_copy_link">live stream</a>.
 <br><br>Cartoon-ber<br>Check out the posts on Facebook and Instagram!</p>
 <br></div>
 </body>
