--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
   <br>
   <p class="headertext">Biography</p>
   <p class="text"> Sydney Kit is a digital, commercial artist from Central Ohio. Inspired by her physical and emotional environment, Sydney Kit creates comic books and animations to evoke positive emotions from her audience. 
-    She currently has two published comic books in her series “Love, Me” and an Audience Choice Award for her piece “To Be Remembered”. </p>
+    She currently has two published comic books in her series “Love, Me” and an Audience Choice Award for her piece “To Be Remembered”. Sydney Kit is the Co-founder and current Fearless Leader and Social Media Lead for the <a href="../columbuscartooncoalition.html">Columbus Cartoon Coalition</a>.</p>
     <br>
     <br>
     <br>
