--- a/columbuscartooncoalition.html
+++ b/columbuscartooncoalition.html
@@ -11,7 +11,7 @@
      <!--meta-->
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <meta name="description" content="The Columbus Cartoon Coalition is a group of comic creatives in Central Ohio.">
-    <meta name="keywords" content="comic club, central ohio art, columbus art, Columbus Cartoon Coalition">
+    <meta name="keywords" content="Columbus Cartoon Coalition, comic club, central ohio art, columbus art">
     <meta name="author" content="Sydney Kit">
 </head>
 <body style="text-align: center; margin: 0%">
@@ -35,11 +35,12 @@
 <br>
 <p class="headertext">How to Support</p> 
 <p class="text">If you're a comic creative (artist, writer, illustrator, etc) in and around Central Ohio, join the Columbus Cartoon Coalition's official <A href="https://discord.gg/ctGRXCCyPX">discord
-    server</A>. <br> Anyone can follow us on <a href="www.facebook.com/cx3.ohio">Facebook</a> and <a href="www.instagram.com/cx3.ohio">Instagram</a> by searching @cx3.ohio.
+    server</A>. <br> Anyone can follow us on <a href="https://facebook.com/cx3.ohio">Facebook</a> and <a href="https://instagram.com/cx3.ohio">Instagram</a> by searching @cx3.ohio.
 </p>
     <br>
 <p class="headertext">Past Projects</p> 
-<p class="text">Columbus Cartoon Coalition's 2022 Anthology<br>Buy the anthology to support our artists<br>Check out our <a href="https://www.instagram.com/tv/CifbJXKDYiM/?utm_source=ig_web_copy_link">live stream</a>.
+<p class="text">Columbus Cartoon Coalition's Winter Coloring Book<br><a href="https://ko-fi.com/columbuscartooncoalition">Buy the coloring book</a><br>
+    Columbus Cartoon Coalition's 2022 Anthology<br><a href="https://ko-fi.com/columbuscartooncoalition">Buy the anthology to support our artists</a><br>Check out our <a href="https://www.instagram.com/tv/CifbJXKDYiM/?utm_source=ig_web_copy_link">live stream</a>.
 <br><br>Cartoon-ber<br>Check out the posts on Facebook and Instagram!</p>
 <br></div>
 </body>
