--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <title>Sydney Kit</title>
  <!--meta-->
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="description" content="Home Page of Sydney Kit - Columbus, OH Digital Artist, Animator, Comic Book Artist">
+   <meta property="og:title" content="Sydney Kit"/>
+   <meta property="og:description" content="Home Page of Sydney Kit - Columbus, OH Cartoonist, Digital Artist, Animator, and more!">
   <meta name="keywords" content="digital art, comic art, digital artist, digital painting">
   <meta name="author" content="Sydney Kit">
+  <meta property="og:image" content="https://storage.ko-fi.com/cdn/useruploads/f66d83b4-5f67-4f36-a427-7f64f68362bd.png"/>
 </head>
 
 <body>
@@ -22,7 +24,7 @@
     <a href="about.html">About</a> 
     <a href="portfolio.html">Portfolio</a>
     <a href="blog/index.html">Blog</a> 
-   <a href="https://www.etsy.com/shop/SydneyKit?ref=shop_sugg">Shop</a>
+   <a href="https://ko-fi.com/sydneykitanim">Shop</a>
    <a href="contact.html">Contact</a>
   </div>
   <div class="fixed">
@@ -38,7 +40,7 @@
   <div class="p fixed">
     <div class="titletext">Latest News</div>
     <div class="text">
-      <p>"A Letter to Brad" is now available! Order the book on Etsy. Check out a preview of the book <a href="blog/a-letter-to-brad-preview.html">here</a>.
+      <p>"Love, Me" is BACK! Get the full scoop <a href="https://ko-fi.com/post/Love-Me-is-BACK-Z8Z0GP4AX">here</a> or submit your advice <a href="https://docs.google.com/forms/d/e/1FAIpQLScI7OjHW4WcKPGbZwgS9J3GHteJW1GpmqL6SsY44GczZ8pHEw/viewform">here</a>.
       <br><br>Learn more about the <a href="../columbuscartooncoalition.html">Columbus Cartoon Coalition</a>.</p>
 </div>
 </div>
@@ -63,7 +65,7 @@
 </div>
 <div class="section">
   <div class="p fixed">
-    <p class="titletext"><a href="https://www.etsy.com/shop/SydneyKit?ref=search_shop_redirect" style="text-decoration: underline; text-decoration-color: #F4DAE2;">Shop</a></p>
+    <p class="titletext"><a href="https://ko-fi.com/sydneykitanim" style="text-decoration: underline; text-decoration-color: #F4DAE2;">Shop</a></p>
     <p class="text">Originals and Copies for Sale</p>
     </div>
 </div>
