--- a/loveme/about.html
+++ b/loveme/about.html
@@ -20,8 +20,8 @@
       <div style="padding:15% 5%;position:relative;"><iframe src="https://player.vimeo.com/video/646719005?h=8b756d9e91&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Love, Me: You Are Not Alone - Beach Promo"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <br>
       <p class="text">
-        <span style="padding: 0px 20px;"><a href="../shop.html">Buy the Comics</a></span>
-        <span style="padding: 0px 20px;"><a href="https://forms.gle/cJNMiL1aU3CXFk4P6">Submit Advice</a></span>
+        <span style="padding: 0px 20px;"><a href="https://ko-fi.com/sydneykitanim">Buy the Comics</a></span>
+        <span style="padding: 0px 20px;"><a href="https://forms.gle/cdvgq8KrDX3R8CpQ6">Submit Advice</a></span>
         <span style="padding: 0px 20px;"><a href="access.html">Digital Access</a></span>
         <span style="padding: 0px 20px;"> <a href="wallpapers.html">Wallpapers</a></span>
     </p>  
@@ -29,16 +29,16 @@
       <img src="comicfan5.jpg" style="width: 12.5%; margin-right: 2.5%;"><img src="comicfan4.jpg" style="width: 13%;margin-right: 2.5%;"><img src="comicfan2.jpg" style="width: 10%;margin-right: 2.5%;"><img src="comicfan1.jpg" style="width: 10%; margin-right: 2.5%;"><img src="comicfan3.jpg" style="width: 13%;margin-right: 2.5%;"><img src="comicfan6.jpg" style="width: 11.5%;">
     <br>
  
-    <p class="headertext">About the Comic Books</p>
+    <p class="headertext">About the Series</p>
       <p class="text"><i>Love, Me</i> is a continuing community project that is comprised of collections of short stories based on submitted advice. As of December 2021, the series features
-      three self-publihsed comic books and twenty-three originally designed, featured animal characters.</p>
+      three self-publihsed comic books and twenty-three originally designed, featured animal characters. The series is continuing again in 2023.</p>
       <div style="padding:15% 5%;position:relative;"><iframe src="https://player.vimeo.com/video/650853893?h=b09026b786&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="&amp;quot;Love, Me: You Are Not Alone&amp;quot; Behind The Scenes"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       <br>
       <p class="headertext">How It Started</p>
 <p class="text"><i>Love, Me</i> started off as a semester-long project for an undergraduate class and has continued into a larger series. The course
-was taught by <a href="https://www.vicieux.art/">Mitch Vicieux</a> who is now the co-founder, along with Sydney Kit, of the Columbus-based comic club <a href="https://www.instagram.com/cx3.ohio/" target="blank">CX3</a>.
-<br><br>It continued outside of class projects and into a second volume, which saw the addition of Candy Princehorn as the script creator. Candy continues to work 
-as the script creator for the series.</p>
+was taught by <a href="https://www.vicieux.art/">Mitch Vicieux</a> who is now the co-founder, along with Sydney Kit, of the Columbus-based comic club <a href="../columbuscartooncoalition.html" target="blank">Columbus Cartoon Coalition</a>.
+<br><br>It continued outside of class projects and into a second volume, which saw the addition of Candy Princehorn as the script creator. Candy continued to work 
+as the script creator for the third comic, "Love, Me: You Are Not Alone".</p>
 <div class="w3-content w3-display-container">
   <img class="mySlides" src="comicbook1.jpg" style="width:70%; margin-left: 15%;">
   <img class="mySlides" src="comicbookinside1.jpg" style="width:70%; margin-left: 15%;">
@@ -74,8 +74,8 @@ function showDivs(n) {
 </script>
 <br>
 <p class="headertext">How to support the "Love, Me" series</p>
-<p class="text">Copies of the comic books and stickers are available for purchase at the <a href="../shop.html">shop</a>.</p>
-<p class="text">Submit your own advice to be turned into a comic! Send an <a href="mailto:kit.frank.art@gmail.com?subject=Love, Me Advice Submission">email</a> or fill out this <a href="https://forms.gle/4dHxhksVVWxDBgUz7">form.</a></p>
+<p class="text">Copies of the comic books and stickers are available for purchase at the <a href="https://ko-fi.com/sydneykitanim">shop</a>.</p>
+<p class="text">Submit your own advice to be turned into a comic! Send an <a href="mailto:kit.frank.art@gmail.com?subject=Love, Me Advice Submission">email</a> or fill out this <a href="https://forms.gle/cdvgq8KrDX3R8CpQ6">form.</a></p>
 <p class="text">Want to support the writer? Commission Candy's work through <a href="mailto:candyprincehorn@yahoo.com">email</a>.</p>
 </div>
 <br>
